objects/FST_Service_Incident_Form__c.object
<CustomObject>
    <description>Created for Australia OneCummins forms</description>
    <fields>
        <fullName>Australia_Date__c</fullName>
        <formula>(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Australia Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Pre_auth_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Pre-auth complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Technician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Technician Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Dealer Technician Name)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Technician_Phone_No__c</fullName>
        <formula>Dealer_Technician_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Technician Phone No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Failure_Group__c</fullName>
        <label>Engine Failure Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 Complete Engine</fullName>
                </value>
                <value>
                    <fullName>1 - CYLINDER BLOCK</fullName>
                </value>
                <value>
                    <fullName>2 - CYLINDER HEAD</fullName>
                </value>
                <value>
                    <fullName>3 - ROCKER LEVER ASSEMBLY</fullName>
                </value>
                <value>
                    <fullName>4 - CAMM FOLLOWER &amp; TAPPET ASS&apos;M</fullName>
                </value>
                <value>
                    <fullName>5 - FUEL SYSTEM-PUMPS</fullName>
                </value>
                <value>
                    <fullName>6 - FUEL SYSTEMS-INJECTORS/TUBES</fullName>
                </value>
                <value>
                    <fullName>7 - LUBRICATING OIL SYSTEM</fullName>
                </value>
                <value>
                    <fullName>8 - COOLING SYSTEM</fullName>
                </value>
                <value>
                    <fullName>9 - DRIVE SYSTEM</fullName>
                </value>
                <value>
                    <fullName>10 - INTAKE SYSTEM</fullName>
                </value>
                <value>
                    <fullName>11 - EXHAUST SYSTEM</fullName>
                </value>
                <value>
                    <fullName>12 - AIR SYSTEM</fullName>
                </value>
                <value>
                    <fullName>13 - ELECTRICAL SYSTEM</fullName>
                </value>
                <value>
                    <fullName>15 - INSTRUMENTS AND GAUGES</fullName>
                </value>
                <value>
                    <fullName>16 - MOUNTING ADAPTIONS</fullName>
                </value>
                <value>
                    <fullName>17 - MISCELLANEOUS</fullName>
                </value>
                <value>
                    <fullName>19 - ELECTRONICS</fullName>
                </value>
                <value>
                    <fullName>20 - VEHICLE BRAKING</fullName>
                </value>
                <value>
                    <fullName>21 - GENERATOR SETS</fullName>
                </value>
                <value>
                    <fullName>22 - HARDWARE</fullName>
                </value>
                <value>
                    <fullName>24 - LOCAL CSP CAMPAIGNS &amp; TRP&apos;s</fullName>
                </value>
                <value>
                    <fullName>25 - WWCM CAMPAIGNS AND TRPS</fullName>
                </value>
                <value>
                    <fullName>NC - Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Last_edited_time__c</fullName>
        <formula>LastModifiedDate +0.4583</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Last edited time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Advised_driver_of_safety_assessment__c</fullName>
        <label>Advised driver of safety assessment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Any_COVID_19_protocol_to_follow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any COVID-19 protocol to follow?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Any_environmental_hazards__c</fullName>
        <label>Any environmental hazards?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Any_other_sicknesses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any other sicknesses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Any_safety_hazards_present__c</fullName>
        <label>Any safety hazards present?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_At_least_1_5m_roadside_clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At least 1.5m roadside clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Been_OS_last_14_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Been OS last 14 days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_CSC_Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSC Staff Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (CSC Staff Member)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_CSS_Number__c</fullName>
        <label>CSS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Call_Log__c</fullName>
        <label>Call Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OneC_Can_face_to_face_contact_be_reduced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can face to face contact be reduced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Cash_or_Account__c</fullName>
        <label>Cash or Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash (Pre-Authorized)</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Cause_of_Failure__c</fullName>
        <label>Cause of Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Chassis_No__c</fullName>
        <formula>OneC_ESN__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chassis No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Closest_Cummins_Branch__c</fullName>
        <label>Closest Cummins Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>130 - Brisbane</fullName>
                </value>
                <value>
                    <fullName>131 - Cairns</fullName>
                </value>
                <value>
                    <fullName>132 - Mackay</fullName>
                </value>
                <value>
                    <fullName>133 - Townsville</fullName>
                </value>
                <value>
                    <fullName>134 - Emerald</fullName>
                </value>
                <value>
                    <fullName>137 - Toowoomba</fullName>
                </value>
                <value>
                    <fullName>139 - Mt Isa</fullName>
                </value>
                <value>
                    <fullName>210 - Wetherill Park</fullName>
                </value>
                <value>
                    <fullName>211 - Grafton</fullName>
                </value>
                <value>
                    <fullName>212 - Newcastle</fullName>
                </value>
                <value>
                    <fullName>214 - Canberra</fullName>
                </value>
                <value>
                    <fullName>217 - Tamworth</fullName>
                </value>
                <value>
                    <fullName>219 - Muswellbrook</fullName>
                </value>
                <value>
                    <fullName>290 - Leeton</fullName>
                </value>
                <value>
                    <fullName>320 - Campbellfield</fullName>
                </value>
                <value>
                    <fullName>321 - Pakenham</fullName>
                </value>
                <value>
                    <fullName>322 - Laverton</fullName>
                </value>
                <value>
                    <fullName>323 - Swan Hill</fullName>
                </value>
                <value>
                    <fullName>325 - Wodonga</fullName>
                </value>
                <value>
                    <fullName>327 - Mildura</fullName>
                </value>
                <value>
                    <fullName>374 - Devonport</fullName>
                </value>
                <value>
                    <fullName>440 - Adelaide</fullName>
                </value>
                <value>
                    <fullName>441 - Mt Gambier</fullName>
                </value>
                <value>
                    <fullName>460 - Darwin</fullName>
                </value>
                <value>
                    <fullName>550 - Perth</fullName>
                </value>
                <value>
                    <fullName>551 - Kalgoorlie</fullName>
                </value>
                <value>
                    <fullName>552 - Karratha</fullName>
                </value>
                <value>
                    <fullName>553 - Bunbury</fullName>
                </value>
                <value>
                    <fullName>554 - Geraldton</fullName>
                </value>
                <value>
                    <fullName>555 - Port Hedland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Contact_w_OS_Traveler_last_14_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact w/ OS Traveler last 14 days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Contact_with_a_Positive_test_person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact with a Positive test person?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Covid_Check_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covid Check Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Cummins_PO__c</fullName>
        <label>Cummins PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Cust_to_Deal_with_Dealership_Direct__c</fullName>
        <label>Cust. to Deal with Dealership Direct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Use Cummins Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Customer_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OneC_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Customer_Complaint__c</fullName>
        <label>Customer Complaint</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OneC_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Customer_Order_Number__c</fullName>
        <label>Customer Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Customer_Purchase_Order__c</fullName>
        <label>Customer Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Date_and_Time_Call_Received_by_CSC__c</fullName>
        <label>Date and Time Call Received by CSC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Date_and_Time_FST_Got_to_the_job__c</fullName>
        <label>Date and Time FST Got to the job?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Date_and_Time_FST_Left_the_job__c</fullName>
        <label>Date and Time FST Left the job?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Date_and_Time_FST_arrived_safely__c</fullName>
        <label>Date and Time FST arrived safely?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Date_and_Time_Repair_Completed__c</fullName>
        <label>Date and Time Repair Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Date_and_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Dealer_ABN_No__c</fullName>
        <label>Dealer ABN No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneC_Dealer_Attending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Attending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Decision_Maker_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Decision Maker Contact Name)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Decision_Maker_Number__c</fullName>
        <formula>OneC_Decision_Maker_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Difficulty_Breathing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Difficulty Breathing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Discussion_Comment_Section__c</fullName>
        <label>Discussion/Comment Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OneC_Driver_contacted_at_job_completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver contacted at job completion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Driver_owner_informed_of_fee_costs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver/owner informed of fee/costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_ERP_Work_Order_Co__c</fullName>
        <label>ERP Work Order (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_ERP_Work_Order__c</fullName>
        <formula>OneC_Guidanz_Number__r.Shop_Work_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Work Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_ESN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ESN</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>FST/Service Incident Forms</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Engine_Platform__c</fullName>
        <formula>OneC_ESN__r.Service_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engine Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Equipment_Make__c</fullName>
        <formula>OneC_ESN__r.Make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Equipment_Model__c</fullName>
        <formula>OneC_ESN__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Estimated_Time_of_Arrival__c</fullName>
        <label>Estimated Time of Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_FSS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSS Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>OneC_Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_FSS_Phone_Number__c</fullName>
        <formula>OneC_FSS_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSS Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_FST_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FST Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>OneC_Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_FST_Phone_Number__c</fullName>
        <formula>OneC_FST_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FST Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_FST_approved_to_exceed_12_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FST approved to exceed 12 hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_FST_is_fit_and_within_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FST is fit and within hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Fault_Code_1__c</fullName>
        <label>Fault Code 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Fault_Code_2__c</fullName>
        <label>Fault Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Fault_Code_3__c</fullName>
        <label>Fault Code 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Fleet_Unit_No__c</fullName>
        <formula>OneC_ESN__r.Unit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet/Unit No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Frequency_of_Contact__c</fullName>
        <label>Frequency of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_From_Cummins_Branch_No__c</fullName>
        <label>From Cummins Branch No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>130 - Brisbane</fullName>
                </value>
                <value>
                    <fullName>131 - Cairns</fullName>
                </value>
                <value>
                    <fullName>132 - Mackay</fullName>
                </value>
                <value>
                    <fullName>133 - Townsville</fullName>
                </value>
                <value>
                    <fullName>134 - Emerald</fullName>
                </value>
                <value>
                    <fullName>137 - Toowoomba</fullName>
                </value>
                <value>
                    <fullName>139 - Mt Isa</fullName>
                </value>
                <value>
                    <fullName>210 - Wetherill Park</fullName>
                </value>
                <value>
                    <fullName>211 - Grafton</fullName>
                </value>
                <value>
                    <fullName>212 - Newcastle</fullName>
                </value>
                <value>
                    <fullName>214 - Canberra</fullName>
                </value>
                <value>
                    <fullName>217 - Tamworth</fullName>
                </value>
                <value>
                    <fullName>219 - Muswellbrook</fullName>
                </value>
                <value>
                    <fullName>290 - Leeton</fullName>
                </value>
                <value>
                    <fullName>320 - Campbellfield</fullName>
                </value>
                <value>
                    <fullName>321 - Pakenham</fullName>
                </value>
                <value>
                    <fullName>322 - Laverton</fullName>
                </value>
                <value>
                    <fullName>323 - Swan Hill</fullName>
                </value>
                <value>
                    <fullName>325 - Wodonga</fullName>
                </value>
                <value>
                    <fullName>327 - Mildura</fullName>
                </value>
                <value>
                    <fullName>374 - Devonport</fullName>
                </value>
                <value>
                    <fullName>440 - Adelaide</fullName>
                </value>
                <value>
                    <fullName>441 - Mt Gambier</fullName>
                </value>
                <value>
                    <fullName>460 - Darwin</fullName>
                </value>
                <value>
                    <fullName>550 - Perth</fullName>
                </value>
                <value>
                    <fullName>551 - Kalgoorlie</fullName>
                </value>
                <value>
                    <fullName>552 - Karratha</fullName>
                </value>
                <value>
                    <fullName>553 - Bunbury</fullName>
                </value>
                <value>
                    <fullName>554 - Geraldton</fullName>
                </value>
                <value>
                    <fullName>555 - Port Hedland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Guidanz_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guidanz Number</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Guidanz Number)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Has_the_FST_returned_home_safely__c</fullName>
        <label>Has the FST returned home safely?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Handed over to branch</fullName>
                </value>
                <value>
                    <fullName>FST attending another breakdown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Have_account_details_been_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have account details been checked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Have_persistent_cough__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have persistent cough?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneC_How_is_threat_being_managed_at_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How is threat being managed at site?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_If_No_please_specify__c</fullName>
        <label>If No, please specify:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_If_No_specify__c</fullName>
        <label>If No, specify:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_If_Yes_specify_hazard__c</fullName>
        <label>If Yes, specify hazard:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_If_Yes_specify_safety_hazard__c</fullName>
        <label>If Yes, specify safety hazard:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Incident_Status__c</fullName>
        <label>Incident Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakdown - Resolved by CSC</fullName>
                </value>
                <value>
                    <fullName>Not a breakdown - Resolved by CSC</fullName>
                </value>
                <value>
                    <fullName>Breakdown - Send Technician</fullName>
                </value>
                <value>
                    <fullName>Vehicle  Towed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Initial_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Initial Contact)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_KMs__c</fullName>
        <label>KMs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneC_Location_of_Incident__c</fullName>
        <label>Location of Incident</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>